create github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">服務項目</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page49.html" aria-expanded="false" target="_blank">預約臉部前先看這&nbsp;</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">魔力音速</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page48.html" aria-expanded="false">魔力音速儀器介紹</a><a class="dropdown-item text-primary" href="page47.html" aria-expanded="false" target="_blank">魔力音速課程介紹</a><a class="dropdown-item text-primary" href="page54.html" aria-expanded="false" target="_blank">魔力音速影片解說及常見問題Ｑ＆Ａ</a></div></div><a class="dropdown-item" href="#" aria-expanded="false">魔力音速</a><a class="dropdown-item text-primary" href="page56.html" aria-expanded="false" target="_blank">基礎護理及煥膚</a><a class="dropdown-item" href="#" aria-expanded="false"></a><a class="dropdown-item text-primary" href="page20.html" aria-expanded="false">FIXXFACE睫毛管理</a><a class="dropdown-item text-primary" href="page52.html" aria-expanded="false" target="_blank">FIXXFACE眉毛塑型<br></a><a class="dropdown-item text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  <br></a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="true" data-toggle="dropdown-submenu">服務項目</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page49.html" aria-expanded="false" target="_blank">預約臉部前先看這&nbsp;</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">魔力音速</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page48.html" aria-expanded="false">魔力音速儀器介紹</a><a class="dropdown-item text-primary" href="page47.html" aria-expanded="false" target="_blank">魔力音速課程介紹</a><a class="dropdown-item text-primary" href="page54.html" aria-expanded="false" target="_blank">魔力音速影片解說及常見問題Ｑ＆Ａ</a></div></div><a class="dropdown-item text-primary" href="page56.html" aria-expanded="false" target="_blank">基礎護理及煥膚</a><a class="dropdown-item" href="#" aria-expanded="false"></a><a class="dropdown-item text-primary" href="page20.html" aria-expanded="false">FIXXFACE睫毛管理</a><a class="dropdown-item text-primary" href="page52.html" aria-expanded="false" target="_blank">FIXXFACE眉毛塑型<br></a><a class="dropdown-item text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  <br></a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -74,7 +74,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="2">
     <div class="mbr-figure">
-        <div><img src="assets/images/skin-care-6-1400x1980.png"></div>
+        <div><img src="assets/images/fixxfacecom-skincare-42-62-1587-2343-1400x2067.png"></div>
         
     </div>
 </section>
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html" target="_blank">預約須知 ❍ </a> <a class="btn btn-black btn-black-outline" href="page49.html" target="_blank">預約臉部前先看這 ◒</a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html" target="_blank">預約須知 ❍ </a> </div>
             </div>
         </div>
     </div>
@@ -129,20 +129,20 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">課程教學</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">服務項目</a>  <a class="btn btn-black-outline btn-black" href="index.html" target="_blank">各種好用推薦你們<br>（尚未整理好）✋<br></a> <a class="btn btn-black-outline btn-black" href="https://fixxface.com" target="_blank">相見恨晚の護膚品牌👀</a></div>
+                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page49.html" target="_blank">預約臉部前先看這<br></a> <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">課程教學</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">服務項目</a>  <a class="btn btn-black-outline btn-black" href="index.html" target="_blank">各種好用推薦你們<br>（尚未整理好）✋<br></a> <a class="btn btn-black-outline btn-black" href="https://fixxface.com" target="_blank">相見恨晚の護膚品牌👀</a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons2-op" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons2-op" data-rv-view="12" style="background-color: rgb(255, 255, 255); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social" title="YouTube" target="_blank" href="http://fixxface.com"><span class="icon54-v3-planet-orbit mbr-iconfont mbr-iconfont-btn"></span></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://www.instagram.com/fixxface/"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="https://lin.ee/ZmZbnHD"><span class="socicon socicon-line mbr-iconfont mbr-iconfont-btn"></span></a>     </div>
+                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/fixxface721"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social" title="YouTube" target="_blank" href="http://fixxface.com"><span class="icon54-v3-planet-orbit mbr-iconfont mbr-iconfont-btn"></span></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://www.instagram.com/fixxface/"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="https://lin.ee/ZmZbnHD"><span class="socicon socicon-line mbr-iconfont mbr-iconfont-btn"></span></a>     </div>
             </div>
         </div>
     </div>
