--- a/page48.html
+++ b/page48.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="565">
+  <section id="menu-g4" data-rv-view="37">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">服務項目</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page49.html" aria-expanded="false" target="_blank">預約臉部前先看這&nbsp;</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">魔力音速</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page48.html" aria-expanded="false">魔力音速儀器介紹</a><a class="dropdown-item text-primary" href="page47.html" aria-expanded="false" target="_blank">魔力音速課程介紹</a><a class="dropdown-item text-primary" href="page54.html" aria-expanded="false" target="_blank">魔力音速影片解說及常見問題Ｑ＆Ａ</a></div></div><a class="dropdown-item" href="#" aria-expanded="false">魔力音速</a><a class="dropdown-item text-primary" href="page56.html" aria-expanded="false" target="_blank">基礎護理及煥膚</a><a class="dropdown-item" href="#" aria-expanded="false"></a><a class="dropdown-item text-primary" href="page20.html" aria-expanded="false">FIXXFACE睫毛管理</a><a class="dropdown-item text-primary" href="page52.html" aria-expanded="false" target="_blank">FIXXFACE眉毛塑型<br></a><a class="dropdown-item text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  <br></a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="true" data-toggle="dropdown-submenu">服務項目</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page49.html" aria-expanded="false" target="_blank">預約臉部前先看這&nbsp;</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">魔力音速</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page48.html" aria-expanded="false">魔力音速儀器介紹</a><a class="dropdown-item text-primary" href="page47.html" aria-expanded="false" target="_blank">魔力音速課程介紹</a><a class="dropdown-item text-primary" href="page54.html" aria-expanded="false" target="_blank">魔力音速影片解說及常見問題Ｑ＆Ａ</a></div></div><a class="dropdown-item text-primary" href="page56.html" aria-expanded="false" target="_blank">基礎護理及煥膚</a><a class="dropdown-item" href="#" aria-expanded="false"></a><a class="dropdown-item text-primary" href="page20.html" aria-expanded="false">FIXXFACE睫毛管理</a><a class="dropdown-item text-primary" href="page52.html" aria-expanded="false" target="_blank">FIXXFACE眉毛塑型<br></a><a class="dropdown-item text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  <br></a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-gq" data-rv-view="548" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-gq" data-rv-view="20" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -75,7 +75,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-i3" data-rv-view="550" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-i3" data-rv-view="22" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gr" data-rv-view="552" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gr" data-rv-view="24" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -102,7 +102,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-h8" data-rv-view="556" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-h8" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -117,7 +117,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gs" data-rv-view="558" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gs" data-rv-view="30" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -132,7 +132,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gt" data-rv-view="560" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gt" data-rv-view="32" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -147,7 +147,7 @@
     </div>
 </section>
 
-<section class="mbr-section article" id="msg-box3-o4" data-rv-view="562" style="background-color: rgb(242, 242, 242); padding-top: 40px; padding-bottom: 80px;">
+<section class="mbr-section article" id="msg-box3-o4" data-rv-view="34" style="background-color: rgb(242, 242, 242); padding-top: 40px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -162,7 +162,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fm" data-rv-view="554" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fm" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
