create github pages

--- a/page31.html
+++ b/page31.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="503">
+  <section id="menu-g4" data-rv-view="579">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-ba" data-rv-view="497" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-ba" data-rv-view="573" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,27 +71,66 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-bd" data-rv-view="499" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-bd" data-rv-view="575" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead">&nbsp; 療程Ｑ＆Ａ</div>
+            <div class="col-xs-12 lead">你的年齡≠你的肌膚年齡</div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-bc" data-rv-view="501" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-bc" data-rv-view="577" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote>✧ &nbsp;抗衰原理是什麼？</blockquote><blockquote><p>A：利用小分子膠原蛋白容易被面部細胞吸收和奈米金箔的消除自由基，抗氧化作用，既補充了膠原蛋白，同時還有極致修復多肽，抗衰祛皺的酵母修護精華，從根本上解決皮膚衰老和下垂的問題，重新煥發肌膚年輕狀態，提升面部輪廓，提拉下顎線，淡化皺紋，從而達到逆齡抗衰的效果。</p></blockquote><blockquote><p>✧ 特色功能是什麼？</p><p><br></p><p><span style="font-family: Bitter, serif; font-size: 13px;">A：原液安全又靈活，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態，美白淡斑，淡化皺紋，從而達到美容抗衰老的神奇效果。</span></p></blockquote><blockquote>✧ 核心成分是什麼？</blockquote><blockquote>A：主要的功效成分有：納米金、高效修復多肽、蛇毒肽、生物糖膠、酵母修護精華等。</blockquote><blockquote>緊致除皺，刺激膠原蛋白、彈性蛋白活性，增加大量的皮下膠原纖維，將表皮、真皮與皮下組織加以固定，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態。</blockquote><blockquote>✧ 專利？</blockquote><blockquote>A：極致修復復合多肽與奈米金技術。</blockquote><blockquote>✧ 產品出處哪兒？</blockquote><blockquote><p>A：瑞士引進專利技術與原材料，同時還有醫學檢驗中心的質檢報告。</p><p><br></p></blockquote><blockquote>✧ 我今年25歲有效果嗎？</blockquote><blockquote><p>Ａ：當然可以用的。25面部就已經開始衰老，越早使用越抗衰老。</p><p><br></p></blockquote><blockquote>✧ 敏感皮膚能用嗎？</blockquote><blockquote><p>Ａ：適用於所有人，但敏感皮膚只要不是在急性過敏期是可以用的。</p><p><br></p></blockquote><blockquote>✧ 衰老分為幾種類型？</blockquote><blockquote>Ａ：抗衰老分為四個階段，衰老初級階段 20-25歲最好能預防衰老，衰老初級階段26-35歲需要延緩衰老，衰老高級第一階段35-45歲逆轉肌齡，衰老高級第二階段45歲以後需要對抗衰老：）</blockquote><blockquote>✧ 為什麼會出現皺紋？</blockquote><blockquote>Ａ：皺紋的產生直接原因是成纖維細胞的缺失斷裂，腦垂體的激素分泌也可以影響成纖維的生長。換言之就是與作息、心情、飲食、經期都有關係。定期做療程一定會有非常滿意的效果。</blockquote><blockquote>✧ 哪些人群是不能做療程的？<span style="font-family: Bitter, serif;">&nbsp;</span></blockquote><blockquote><p><span style="font-family: Bitter, serif;">&nbsp;1、痘痘爆發期</span><br></p><p>&nbsp;2、急性過敏期 &nbsp;</p><p>&nbsp;3、用過其他功效產品排毒</p><p>&nbsp;4、耳後敏感測試有敏感反應&nbsp;</p><p>&nbsp;5、皮膚有破損 &nbsp;</p><p>&nbsp;6、做過光電項目、注射項目不足15天或雖超過15 天皮膚有其他異常表現的。</p><p><br></p></blockquote><blockquote><p>✧ 產品有美白功效嗎？</p></blockquote><blockquote><p>Ａ：有的，產品里的九胜肽有美白淡斑的功效</p><p><br></p><p><br></p></blockquote><blockquote><p>✧ 做完療程臉部會不會沒有什麼變化？</p><p><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp; &nbsp;多久效果會明顯？</span></p></blockquote><blockquote><p>Ａ：不同的階段會有不同的變化，大部分人當場就會感到自己皮膚變緊了，用手戳會覺得彈性增加。&nbsp;</p><p><br></p></blockquote><blockquote>✧ 一般見效療程是多少天？</blockquote><blockquote><p>Ａ：當下做完立即見效</p><p><span style="font-family: Bitter, serif;">&nbsp; &nbsp; &nbsp; 建議7~10天做一次療程</span><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp;</span><span style="font-family: Bitter, serif; font-size: 13px;">（維持效果最佳）</span></p><p><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp; &nbsp; &nbsp;使用時間長短不同效果不同。</span></p></blockquote><blockquote>✧ 可以改善毛孔粗大問題嗎？</blockquote><blockquote>Ａ：可以，當下療程後皮膚立即緊致，明顯縮小毛孔。</blockquote><blockquote><br></blockquote><blockquote><p><span style="font-style: normal;"><br></span></p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-family: Bitter, serif; font-size: 13px;">不良的生活習慣會造成皮膚衰老。</span><br></p><p>不愛喝水，水分不足=&gt;&gt;膠原蛋白流失。
+</p><p>經常熬夜，睡眠不足，修護能力下降。
+</p><p>心情波動大，壓力焦慮，臉上皺紋早早爬滿臉
+</p><p>年齡增長，快節奏生活，護理不當
+</p><p>你的肌齡比年齡老的更快。
+</p><p><br></p><p><br></p><p><br></p><p>✧ &nbsp;抗衰原理是什麼？</p></blockquote><blockquote><p>A：利用小分子膠原蛋白容易被面部細胞吸收和奈米金箔的消除自由基，抗氧化作用，既補充了膠原蛋白，同時還有極致修復多肽，抗衰祛皺的酵母修護精華，從根本上解決皮膚衰老和下垂的問題，重新煥發肌膚年輕狀態，提升面部輪廓，提拉下顎線，淡化皺紋，從而達到逆齡抗衰的效果。</p></blockquote><blockquote><p>✧ 特色功能是什麼？</p><p><br></p><p><span style="font-family: Bitter, serif; font-size: 13px;">A：原液安全又靈活，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態，美白淡斑，淡化皺紋，從而達到美容抗衰老的神奇效果。</span></p></blockquote><blockquote>✧ 核心成分是什麼？</blockquote><blockquote>A：主要的功效成分有：納米金、高效修復多肽、蛇毒肽、生物糖膠、酵母修護精華等。</blockquote><blockquote>緊致除皺，刺激膠原蛋白、彈性蛋白活性，增加大量的皮下膠原纖維，將表皮、真皮與皮下組織加以固定，提升收緊衰老的皮膚，全面減緩肌膚衰老，令肌膚恢復並停留在平滑、緊實、光彩、勻淨、潤澤的年輕狀態。</blockquote><blockquote>✧ 專利？</blockquote><blockquote>A：極致修復復合多肽與奈米金技術。</blockquote><blockquote>✧ 產品出處哪兒？</blockquote><blockquote><p>A：瑞士引進專利技術與原材料，同時還有醫學檢驗中心的質檢報告。</p><p><br></p></blockquote><blockquote>✧ 我今年25歲有效果嗎？</blockquote><blockquote><p>Ａ：當然可以用的。25面部就已經開始衰老，越早使用越抗衰老。</p><p><br></p></blockquote><blockquote>✧ 敏感皮膚能用嗎？</blockquote><blockquote><p>Ａ：適用於所有人，但敏感皮膚只要不是在急性過敏期是可以用的。</p><p><br></p></blockquote><blockquote>✧ 衰老分為幾種類型？</blockquote><blockquote>Ａ：抗衰老分為四個階段，衰老初級階段 20-25歲最好能預防衰老，衰老初級階段26-35歲需要延緩衰老，衰老高級第一階段35-45歲逆轉肌齡，衰老高級第二階段45歲以後需要對抗衰老：）</blockquote><blockquote>✧ 為什麼會出現皺紋？</blockquote><blockquote>Ａ：皺紋的產生直接原因是成纖維細胞的缺失斷裂，腦垂體的激素分泌也可以影響成纖維的生長。換言之就是與作息、心情、飲食、經期都有關係。定期做療程一定會有非常滿意的效果。</blockquote><blockquote>✧ 哪些人群是不能做療程的？<span style="font-family: Bitter, serif;">&nbsp;</span></blockquote><blockquote><p><span style="font-family: Bitter, serif;">&nbsp;1、痘痘爆發期</span><br></p><p>&nbsp;2、急性過敏期 &nbsp;</p><p>&nbsp;3、用過其他功效產品排毒</p><p>&nbsp;4、耳後敏感測試有敏感反應&nbsp;</p><p>&nbsp;5、皮膚有破損 &nbsp;</p><p>&nbsp;6、做過光電項目、注射項目不足15天或雖超過15 天皮膚有其他異常表現的。</p><p><br></p></blockquote><blockquote><p>✧ 產品有美白功效嗎？</p></blockquote><blockquote><p>Ａ：有的，產品里的九胜肽有美白淡斑的功效</p><p><br></p><p><br></p></blockquote><blockquote><p>✧ 做完療程臉部會不會沒有什麼變化？</p><p><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp; &nbsp;多久效果會明顯？</span></p></blockquote><blockquote><p>Ａ：不同的階段會有不同的變化，大部分人當場就會感到自己皮膚變緊了，用手戳會覺得彈性增加。&nbsp;</p><p><br></p></blockquote><blockquote>✧ 一般見效療程是多少天？</blockquote><blockquote><p>Ａ：當下做完立即見效</p><p><span style="font-family: Bitter, serif;">&nbsp; &nbsp; &nbsp; 建議7~10天做一次療程</span><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp;</span><span style="font-family: Bitter, serif; font-size: 13px;">（維持效果最佳）</span></p><p><span style="font-family: Bitter, serif; font-size: 13px;">&nbsp; &nbsp; &nbsp;使用時間長短不同效果不同。</span></p></blockquote><blockquote>✧ 可以改善毛孔粗大問題嗎？</blockquote><blockquote>Ａ：可以，當下療程後皮膚立即緊致，明顯縮小毛孔。</blockquote><blockquote><br></blockquote><blockquote><p><span style="font-style: normal;"><br></span></p></blockquote></div>
         </div>
     </div>
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-b9" data-rv-view="495" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<section class="mbr-section article mbr-section__container" id="content1-p7" data-rv-view="607" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead">你的年齡≠你的肌膚年齡</div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-pg" data-rv-view="625" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote>告別法令紋，拉提蘋果肌
+</blockquote><blockquote>別再跟細紋黯沉糾纏不清! 急性子要馬上說掰掰。
+<span style="font-size: 1.09rem;">眼角細紋，浮腫眼袋，黑眼圈，熬夜臉
+</span><span style="font-size: 1.09rem;">越嚴重越有效，體驗時光膜法&nbsp;</span></blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-p6" data-rv-view="605" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">&nbsp;</h3>
+                <p class="mbr-section-subtitle">&nbsp;</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-b9" data-rv-view="571" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
