--- a/page62.html
+++ b/page62.html
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-black" href="page32.html">療程效果</a> <a class="btn btn-black btn-black-outline" href="page63.html" target="_blank">療程Q&amp;A<br></a></div>
+                <div class="text-xs-center"><a class="btn btn-black" href="page32.html">立即預約</a> <a class="btn btn-black btn-black-outline" href="page63.html" target="_blank">療程Q&amp;A<br></a></div>
             </div>
         </div>
     </div>
