--- a/page21.html
+++ b/page21.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="148">
+  <section id="menu-g4" data-rv-view="49">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="119" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7j" data-rv-view="20" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -73,18 +73,18 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-95" data-rv-view="121" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-95" data-rv-view="22" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">韓式角蛋白作品照</h3>
+                <h3 class="mbr-section-title display-2">睫毛管理作品照</h3>
                 <p class="mbr-section-subtitle">更多作品請至INSTAGRAM:FIXXFACE</p>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery1-7h" data-filter="false" data-rv-view="125" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery1-7h" data-filter="false" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7g" data-rv-view="123" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-7g" data-rv-view="24" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
