--- a/page44.html
+++ b/page44.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="438">
+  <section id="menu-g4" data-rv-view="1326">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -62,7 +62,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-f2" data-filter="false" data-rv-view="397" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery2-f2" data-filter="false" data-rv-view="1285" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
@@ -204,7 +204,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-f3" data-rv-view="432" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-f3" data-rv-view="1320" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -214,19 +214,19 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-f0" data-rv-view="434" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-f0" data-rv-view="1322" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="page46.html" target="_blank">眉毛塑形教學</a> <a class="btn btn-black btn-black-outline" href="page26.html">韓式睫毛管理美睫術教學<br></a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="page46.html" target="_blank">韓國音波教學</a> <a class="btn btn-primary" href="page46.html" target="_blank">黑科技音速槍教學<br></a> <a class="btn btn-primary" href="page46.html" target="_blank">眉毛塑形教學</a> <a class="btn btn-black btn-black-outline" href="page26.html">韓式睫毛管理美睫術教學<br></a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="436" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1324" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
