--- a/welcometofixxface.html
+++ b/welcometofixxface.html
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://fixxface.com/" target="_blank">關於fixxface</a> <a class="btn btn-black btn-black-outline" href="https://fixxface.com/" target="_blank">自創護膚品牌</a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://fixxface.com/pages/%E9%97%9C%E6%96%BCfixxface" target="_blank">關於fixxface</a> <a class="btn btn-black btn-black-outline" href="https://fixxface.com/" target="_blank">自創護膚品牌</a></div>
             </div>
         </div>
     </div>
