create github pages

--- a/page49.html
+++ b/page49.html
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Fixxface skincare</h3>
-                <div class="lead"><p><br></p><p>以客製化臉部保養及護膚保養諮詢為主要肌膚服務，希望透過真實的狀況來瞭解和解決每一位客人肌膚問題，進而處理肌膚問題，給予肌膚最適當的處理 。臉部保養有分成快速見效零修復期的魔力音速儀器課程及基礎清粉刺課程。</p><p><br></p><p>(Ａ)&nbsp; 魔力音速儀器療程</p><p>利用微米物化科技，在不傷害肌膚狀態下，將有效成分物化成微米等級活性分子，使皮膚可有效吸收並作用，從而改善敏感，粉刺，面皰痘痘、缺水、紋路、暗沈、老化等肌膚問題。</p><p>(Ｂ)&nbsp; 基礎基本護理及煥膚管理</p><p><br></p><p>/</p><p>透過美容專業技法及儀器的堆疊下，進而達到改善肌膚狀況的效果，第一次來的姑娘們，如果不知道想做什麼療程，可以看自己想改善什麼及想達到什麼樣的效果，針對你的肌膚 和你建議適合的課程，經過討論後再決定哪個課程。</p><p>※肌膚敏感( 酒糟、脂漏等 嚴重痘痘肌肌膚易紅、閉鎖性粉刺和粉刺量較多等肌膚 )</p><p>麻煩預約前請先告知：）</p><p><br></p></div>
+                <div class="lead"><p><br></p><p>以客製化臉部保養及護膚保養諮詢為主要肌膚服務，希望透過真實的狀況來瞭解和解決每一位客人肌膚問題，進而處理肌膚問題，給予肌膚最適當的處理 。臉部保養有分成快速見效零修復期的魔力音速儀器課程及基礎清粉刺課程。</p><p><br></p><p>(Ａ)&nbsp; 魔力音速儀器療程</p><p>利用微米物化科技，在不傷害肌膚狀態下，將有效成分物化成微米等級活性分子，使皮膚可有效吸收並作用，從而改善敏感，粉刺，面皰痘痘、缺水、紋路、暗沈、老化等肌膚問題。</p><p>(Ｂ)&nbsp; ＬＤＭ水光水滴課程</p><p>透過儀器進而達到改善肌膚狀況的效果，皮膚再生，減少泛紅炎症<br><br></p><p><br></p><p>/</p><p>透過美容專業技法及儀器的堆疊下，進而達到改善肌膚狀況的效果，第一次來的姑娘們，如果不知道想做什麼療程，可以看自己想改善什麼及想達到什麼樣的效果，針對你的肌膚 和你建議適合的課程，經過討論後再決定哪個課程。</p><p>※肌膚敏感( 酒糟、脂漏等 嚴重痘痘肌肌膚易紅、閉鎖性粉刺和粉刺量較多等肌膚 )</p><p>麻煩預約前請先告知：）</p><p><br></p></div>
                 
             </div>
         </div>
