create github pages

--- a/page45.html
+++ b/page45.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="521">
+  <section id="menu-g4" data-rv-view="471">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="516" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="mbr-section mbr-after-navbar" id="msg-box5-eq" data-rv-view="466" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -75,7 +75,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2"><div><br></div><div>Happy 6th anniversary</div></h3>
+                  <h3 class="mbr-section-title display-2"><div><br></div><div>Happy 7 anniversary</div></h3>
                   <div class="lead">
 
                     <p></p><p>週年慶療程活動 <br><br>活動期間 要想優惠步驟一步一步做好<br>拍照發文打卡標記可享有以下優惠<br><br>Top1<br>眉毛塑型原價$3600 優惠2500<br>兩人同行 再折500 (單人2250)<br><br>+加購眉護增長修護液優惠999(原價1280)<br><br>Top2<br>角蛋白美睫 優惠1380<br>兩人同行 再折400 （單人1180)<br><br>+加購睫毛養護增長修護液優惠999(原價1280)<br>   限量20組<br><br>Top3<br>膠原蛋白逆齡童顏療程 原價$2500<br>即可享有優惠價 $2199<br>（包含十條膠原蛋白線 再贈送清粉刺，唇膜）<br><br>Top4<br>任一臉部保養<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br></p><p></p>
@@ -94,7 +94,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-er" data-rv-view="519" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-er" data-rv-view="469" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
