--- a/page42.html
+++ b/page42.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Web Builder Description">
   
   
-  <title>Happy 4th anniversary</title>
+  <title>Happy 7th anniversary</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -68,21 +68,21 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 38%;">
-                  <div class="mbr-figure"><img src="assets/images/s-60178444-1080x1080.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/-1-1080x1080.png"></div>
               </div>
 
               
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2"><div><br></div><div>Happy 4th anniversary</div></h3>
+                  <h3 class="mbr-section-title display-2"><div>Happy 7th anniversary<br></div></h3>
                   <div class="lead">
 
-                    <p>2020 9/3-10/3<br><br>we are going to have a beauty time<br>四週年活動開跑哩&nbsp;<br>線上同步優惠<br>週年慶優惠活動<br>---<br>sale sale sale<br><br></p>
+                    <p><em>2023 10/29-12/6</em><br><br>we are going to have a beauty time<br>七週年活動開跑哩&nbsp;<br>線上同步優惠<br>週年慶優惠活動<br><br>📢꙳⟡sale sale sale📢꙳⟡<br><br></p>
 
                   </div>
 
-                  <div><a class="btn btn-danger" href="page43.html" target="_blank">產品活動</a>  <a class="btn btn-danger" href="page45.html" target="_blank">&nbsp;療程活動</a></div>
+                  <div><a class="btn btn-info" href="page43.html" target="_blank">產品活動</a>  <a class="btn btn-info" href="page45.html" target="_blank">&nbsp;課程活動</a></div>
               </div>
 
 
