create github pages

--- a/page42.html
+++ b/page42.html
@@ -78,11 +78,11 @@
                   <h3 class="mbr-section-title display-2"><div>Happy 7th anniversary<br></div></h3>
                   <div class="lead">
 
-                    <p><em>2023 10/29-12/6</em><br><br>we are going to have a beauty time<br>七週年活動開跑哩&nbsp;<br>線上同步優惠<br>週年慶優惠活動<br><br>📢꙳⟡sale sale sale📢꙳⟡<br><br></p>
+                    <p><em>2023 10/29-12/6&nbsp;</em><br><br><a href="https://www.instagram.com/fixxface/" class="text-primary">we are going to have a beauty time</a><br>七週年活動開跑哩&nbsp;<br>線上同步優惠<br>週年慶優惠活動<br><br>📢꙳⟡sale sale sale📢꙳⟡<br><br></p>
 
                   </div>
 
-                  <div><a class="btn btn-info" href="page65.html" target="_blank">產品活動</a>  <a class="btn btn-info" href="page45.html" target="_blank">&nbsp;課程活動</a></div>
+                  <div><a class="btn btn-info" href="page65.html" target="_blank">產品活動</a>  <a class="btn btn-info" href="page45.html" target="_blank">&nbsp;課程活動</a> </div>
               </div>
 
 
